{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 47,
  "lineage": "c55af2e7-b401-852d-c0fb-a5babba25fd2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "test_ec2_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01458b8dc0ff847c2",
            "arn": "arn:aws:ec2:eu-north-1:590183919160:elastic-ip/eipalloc-01458b8dc0ff847c2",
            "association_id": "eipassoc-0333c2fb4ce485530",
            "domain": "vpc",
            "id": "eipalloc-01458b8dc0ff847c2",
            "instance": "i-0958adb3043d820b1",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-07c9fe18416456eac",
            "private_dns": "ip-10-0-1-137.eu-north-1.compute.internal",
            "private_ip": "10.0.1.137",
            "public_dns": "ec2-13-61-88-8.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.61.88.8",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "data.terraform_remote_state.jenkins",
            "module.test_ec2.aws_instance.instance",
            "module.test_ec2.aws_security_group.instance_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test_ec2_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:590183919160:targetgroup/testec2-nlb-tg/b9b6e51246140ed9-20241226103356554700000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:590183919160:targetgroup/testec2-nlb-tg/b9b6e51246140ed9",
            "target_id": "i-0958adb3043d820b1"
          },
          "dependencies": [
            "data.terraform_remote_state.jenkins",
            "module.nlb.aws_lb_target_group.target_group",
            "module.test_ec2.aws_instance.instance",
            "module.test_ec2.aws_security_group.instance_sg"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "external_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:590183919160:loadbalancer/net/testec2-nlb-lb/90ba2bf4971bb7ef",
            "arn_suffix": "net/testec2-nlb-lb/90ba2bf4971bb7ef",
            "dns_name": "testec2-nlb-lb-90ba2bf4971bb7ef.elb.eu-north-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:590183919160:loadbalancer/net/testec2-nlb-lb/90ba2bf4971bb7ef",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "testec2-nlb-lb",
            "security_groups": [
              "sg-02ea408edd412f349"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-088aa3d3003cf4301"
              },
              {
                "subnet_id": "subnet-0ce7afad67aa9c622"
              }
            ],
            "subnets": [
              "subnet-088aa3d3003cf4301",
              "subnet-0ce7afad67aa9c622"
            ],
            "tags": {
              "Name": "testec2-nlb-lb"
            },
            "tags_all": {
              "Name": "testec2-nlb-lb"
            },
            "vpc_id": "vpc-0882d9636821ffd4d",
            "zone_id": "Z1UDT6IFJ4EJM"
          },
          "dependencies": [
            "data.terraform_remote_state.jenkins",
            "module.nlb.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:590183919160:listener/net/testec2-nlb-lb/90ba2bf4971bb7ef/f3ae6adf75594092",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:590183919160:targetgroup/testec2-nlb-tg/b9b6e51246140ed9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:590183919160:listener/net/testec2-nlb-lb/90ba2bf4971bb7ef/f3ae6adf75594092",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:590183919160:loadbalancer/net/testec2-nlb-lb/90ba2bf4971bb7ef",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.jenkins",
            "module.nlb.aws_lb.external_lb",
            "module.nlb.aws_lb_target_group.target_group",
            "module.nlb.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:590183919160:targetgroup/testec2-nlb-tg/b9b6e51246140ed9",
            "arn_suffix": "targetgroup/testec2-nlb-tg/b9b6e51246140ed9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "80",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:590183919160:targetgroup/testec2-nlb-tg/b9b6e51246140ed9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:590183919160:loadbalancer/net/testec2-nlb-lb/90ba2bf4971bb7ef"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "testec2-nlb-tg",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0882d9636821ffd4d"
          },
          "dependencies": [
            "data.terraform_remote_state.jenkins"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:590183919160:targetgroup/testec2-nlb-tg/b9b6e51246140ed9-20241226103356838300000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:590183919160:targetgroup/testec2-nlb-tg/b9b6e51246140ed9",
            "target_id": "i-0958adb3043d820b1"
          },
          "dependencies": [
            "data.terraform_remote_state.jenkins",
            "module.nlb.aws_lb_target_group.target_group",
            "module.test_ec2.aws_instance.instance",
            "module.test_ec2.aws_security_group.instance_sg"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:590183919160:security-group/sg-02ea408edd412f349",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ea408edd412f349",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241226103335735300000001",
            "name_prefix": "terraform-",
            "owner_id": "590183919160",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "testec2-nlb-lb-sg"
            },
            "tags_all": {
              "Name": "testec2-nlb-lb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0882d9636821ffd4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.jenkins"
          ]
        }
      ]
    },
    {
      "module": "module.test_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-089146c5626baa6bf",
            "arn": "arn:aws:ec2:eu-north-1:590183919160:instance/i-0958adb3043d820b1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jenkins",
            "id": "i-0958adb3043d820b1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "omer_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07c9fe18416456eac",
            "private_dns": "ip-10-0-1-137.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.137",
            "public_dns": "ec2-13-61-88-8.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.61.88.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0db7f941f17f0716e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce7afad67aa9c622",
            "tags": {
              "Name": "testec2-instance"
            },
            "tags_all": {
              "Name": "testec2-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bf74a850c95ec37f"
            ]
          },
          "dependencies": [
            "data.terraform_remote_state.jenkins",
            "module.test_ec2.aws_security_group.instance_sg"
          ]
        }
      ]
    },
    {
      "module": "module.test_ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:590183919160:security-group/sg-0bf74a850c95ec37f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf74a850c95ec37f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241226103339709400000002",
            "name_prefix": "terraform-",
            "owner_id": "590183919160",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "testec2-sg"
            },
            "tags_all": {
              "Name": "testec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0882d9636821ffd4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.jenkins"
          ]
        }
      ]
    }
  ]
}